DecorationEventFilter: check if window is deleted before sending release events

When double click to close window is enabled, there is a high chance the
window is in destruction before the second mouse release event is sent
to the window decoration, which causes a crash. This adds a check to
prevent the crash.

BUG: 473244
FIXED-IN: 6.0